@@ -189,14 +189,14 @@ and the <a href="#InputData"><b>Input Data format</b></a>, with the <a href="#Va
 </p>
 <p>
 You may edit Input Data files using a good plain text editor
-(<a href="http://thomer.com/vi/vi.html">vim</a>,
+(<a href="http://www.gnome.org/projects/gedit/">gedit</a>,
  <a href="http://www.jedit.org/index.php">jEdit</a>,
  <a href="http://www.nano-editor.org/">nano</a>,
- <a href="http://www.gnome.org/projects/gedit/">gedit (Linux)</a>,
+ <a href="http://www.vim.org/about.php">vim</a>,
 <!-- <a href="http://www.barebones.com/products/textwrangler/">TextWrangler (OS X)</a>, -->
 <!-- 
  <a href="http://emacsformacosx.com/">Emacs for OS X</a>, 
- <a href="http://macvim.org/OSX/index.php">Vim for OS X</a>. 
+ <a href="http://macvim.org/OSX/index.php">vim for OS X</a>. 
  <a href="http://www.apple.com/support/mac101/work/23/">TextEdit (OS X)</a>,
 -->
  <a href="http://notepad-plus.sourceforge.net/uk/site.htm">NotePad++ (Windows)</a>,
@@ -331,21 +331,22 @@ Some run-time information will be displayed on the Terminal and
 the results of your Frame3DD analysis will have been appended to the end of the <b>exE.out</b> Output Data file.
 Data files used primarily for plotting are stored in the <b>/tmp/frame3dd_temp_$USER</b> directory.
 <li>       You may view Output Data files and edit Input Data files using a good plain text editor
-<!-- (<a href="http://thomer.com/vi/vi.html">vim</a>, -->
-(<a href="http://www.jerrywang.net/vi/">vim</a>,
  <a href="http://www.gnome.org/projects/gedit/">gedit</a>,
  <a href="http://www.nano-editor.org/">nano</a>),
+(<a href="http://www.vim.org/about.php">vim</a>,
 or a spreadsheet program
 (<a href="http://docs.google.com/">GoogleDocs</a>,
  <a href="http://www.libreoffice.org/">LibreOffice</a>,
  <a href="http://projects.gnome.org/gnumeric/">Gnumeric</a>).  For example, 
 to read or edit the Input Data file.   Double-click the <b>Home</b> icon on the Desktop, navigate to the directory of your data files, right click
 on the Data File and select the editor of your choice.
-The text editors <a href="http://www.jerrywang.net/vi/">vim</a>,
- <a href="http://www.gnome.org/projects/gedit/">gedit</a>, and 
- <a href="http://www.nano-editor.org/">nano</a> should already be installed;
+The text editors <a href="http://www.gnome.org/projects/gedit/">gedit</a>, 
+ <a href="http://www.nano-editor.org/">nano</a>, and 
+ <a href="http://www.vim.org/about.php">vim</a> should already be installed;
 there should be no need to install another editor.
-A tutorial for vim is <a href="http://www.jerrywang.net/vi/">here</a>.
+Three tutorials for vim are <a href="http://www.jerrywang.net/vi/">here</a>, 
+<a href="http://thomer.com/vi/vi.html">here</a>, and
+<a href="http://www.duke.edu/~hpgavin/vi.html">here</a>. 
 
 <li>Proceed by running your own <b>Frame3DD</b> analyses using a command like ...
 <pre>
@@ -516,14 +517,15 @@ the results of your Frame3DD analysis will have been appended to the end of the
 <b>exE.out</b> Output Data file. Data files used primarily for plotting are stored in the <b>/tmp/frame3dd_temp_$USER</b> directory. 
 
 <li>     You may view Output Data files and edit Input Data files using a good plain text editor
-(<a href="http://www.jedit.org/index.php">jEdit</a>, 
-<!-- <a href="http://www.barebones.com/products/textwrangler/">TextWrangler</a>,-->
- <a href="http://macvim.org/OSX/index.php">Vim</a>), 
- <a href="http://support.apple.com/kb/HT2523">TextEdit</a>,
+(<a href="http://www.gnome.org/projects/gedit/">gedit</a>,
+ <a href="http://www.jedit.org/index.php">jEdit</a>, 
+ <a href="http://macvim.org/OSX/index.php">vim</a>), 
 or a spreadsheet program
 (<a href="http://docs.google.com/">GoogleDocs</a>,
 <a href="http://www.libreoffice.org/">LibreOffice</a>).<br>
-A tutorial for Vim is <a href="http://www.jerrywang.net/vi/">here</a>. 
+Three tutorials for vim are <a href="http://www.jerrywang.net/vi/">here</a>, 
+<a href="http://thomer.com/vi/vi.html">here</a>, and
+<a href="http://www.duke.edu/~hpgavin/vi.html">here</a>. 
 If you use Apple's TextEdit,
 make sure you are in Plain Text mode  ...  [SHIFT] [APPLE] [T] ...  or ...   <b>Format > Make Plain Text </b> ... <br>
 <li>
@@ -670,13 +672,16 @@ Data files used primarily for plotting are stored in the <b>Desktop\Frame3DD\tem
 <li>       You may view Output Data files and edit Input Data files
 using a good plain text editor
 (<a href="http://notepad-plus.sourceforge.net/uk/site.htm">NotePad++</a>,
+ <a href="http://www.gnome.org/projects/gedit/">gedit</a>,
  <a href="http://www.jedit.org/index.php">jEdit</a>,
- <a href="http://www.vim.org/about.php">gvim</a>),
+ <a href="http://www.vim.org/about.php">vim</a>),
  <a href="http://en.wikipedia.org/wiki/Notepad_(Windows)">NotePad</a>,  
 or a spreadsheet program
 (<a href="http://docs.google.com/">GoogleDocs</a>,
  <a href="http://www.libreoffice.org/">LibreOffice</a>).
-A tutorial for gvim is <a href="http://www.jerrywang.net/vi/">here</a>. 
+Three tutorials for vim are <a href="http://www.jerrywang.net/vi/">here</a>, 
+<a href="http://thomer.com/vi/vi.html">here</a>, and
+<a href="http://www.duke.edu/~hpgavin/vi.html">here</a>. 
 <li>Proceed by running your own <b>Frame3DD</b> analyses using a command like ...
 <pre>
 frame3dd  MyFrame.3dd  MyResultsA.out
